fix: prevent misalignment with the people you may know tab

--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -27,12 +27,11 @@ h3 {
 
 .home-left {
   position: sticky;
-  top: 68px;
-  height: calc(100vh - 68px);
-  min-width: 240px;
+  height: calc(100vh - 5em);
+  margin-top: 5em;
   width: 320px;
+  top: 80px;
   overflow-y: hidden;
-  padding: 0.75em 0 0 0;
 }
 
 .home-left:hover,
